--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>debasmita-a.testframework.utility-classes</groupId>
-  <artifactId>utility-classes</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
-  <description>A set of utility classes to to read Property, CSV, JSON and Excel files.</description>
-  
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>debasmita-a.testframework.utility-classes</groupId>
+	<artifactId>utility-classes</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+
+	<description>A set of utility classes to to read Property, CSV, JSON and
+		Excel files.</description>
+
+
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -17,8 +20,15 @@
 	<scm>
 		<connection></connection>
 		<developerConnection></developerConnection>
-		<url></url>
+		<url>https://github.com/debasmita-a/java-utility-classes</url>
 	</scm>
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<url>https://maven.pkg.github.com/debasmita-a/java-utility-classes</url>
+		</repository>
+	</distributionManagement>
 
 	<developers>
 		<developer>
@@ -31,8 +41,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>22</maven.compiler.source>
+		<maven.compiler.target>22</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -52,6 +62,20 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.2.3</version>
+		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.18.3</version>
+		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.18.3</version>
 		</dependency>
 
 	</dependencies>
